[gd_scene load_steps=6 format=2]

[ext_resource path="res://panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Node.gd" type="Script" id=2]
[ext_resource path="res://Camera2D.gd" type="Script" id=3]
[ext_resource path="res://Camera2D1.gd" type="Script" id=4]
[ext_resource path="res://skin_assets/Theme.tres" type="Theme" id=5]

[node name="main" type="Node"]
script = ExtResource( 2 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
theme = ExtResource( 5 )
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EDIT" type="Control" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="TextEdit" type="TextEdit" parent="TabContainer/EDIT"]
margin_left = 156.23
margin_top = 20.1587
margin_right = 196.23
margin_bottom = 60.1587
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="TabContainer/EDIT"]
margin_left = 54.0
margin_top = 36.0
margin_right = 78.0
margin_bottom = 60.0

[node name="VIEW" type="Control" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Viewports" type="HBoxContainer" parent="TabContainer/VIEW"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer1" type="ViewportContainer" parent="TabContainer/VIEW/Viewports"]
margin_right = 505.0
margin_bottom = 564.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport1" type="Viewport" parent="TabContainer/VIEW/Viewports/ViewportContainer1"]
size = Vector2( 505, 564 )
handle_input_locally = false
render_target_update_mode = 0

[node name="Camera2D1" type="Camera2D" parent="TabContainer/VIEW/Viewports/ViewportContainer1/Viewport1"]
current = true
script = ExtResource( 4 )

[node name="paneA" parent="TabContainer/VIEW/Viewports/ViewportContainer1/Viewport1" instance=ExtResource( 1 )]
position = Vector2( -256, -300 )

[node name="ViewportContainer2" type="ViewportContainer" parent="TabContainer/VIEW/Viewports"]
margin_left = 510.0
margin_right = 1016.0
margin_bottom = 564.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport2" type="Viewport" parent="TabContainer/VIEW/Viewports/ViewportContainer2"]
size = Vector2( 506, 564 )
handle_input_locally = false
render_target_update_mode = 0

[node name="Camera2D2" type="Camera2D" parent="TabContainer/VIEW/Viewports/ViewportContainer2/Viewport2"]
current = true
script = ExtResource( 3 )

[node name="paneB" parent="TabContainer/VIEW/Viewports/ViewportContainer2/Viewport2" instance=ExtResource( 1 )]
position = Vector2( -256, -300 )
image_to_load = "res://images/image2.jpg"

[node name="Button_Pane_B_active" type="Button" parent="TabContainer/VIEW"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 720.0
margin_top = 8.0
margin_right = -259.0
margin_bottom = -532.0
text = "B (])"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Pane_A_active" type="Button" parent="TabContainer/VIEW"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 230.0
margin_top = 8.0
margin_right = -749.0
margin_bottom = -532.0
text = "A ([)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EXPORT" type="Control" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[connection signal="pressed" from="TabContainer/VIEW/Button_Pane_B_active" to="." method="_on_Button_Pane_B_active_pressed"]
[connection signal="pressed" from="TabContainer/VIEW/Button_Pane_A_active" to="." method="_on_Button_Pane_A_active_pressed"]
